force-app/src/objects/c2g__CompanyOwnership__c.object
<CustomObject>
    <customHelpPage>c2g__companyownershiphelp</customHelpPage>
    <description>Stores information about a company&apos;s ownership structure.</description>
    <fields>
        <fullName>c2g__CompanyName__c</fullName>
        <formula>If(c2g__ExternalCompany__c != null,  c2g__ExternalCompany__c , c2g__InternalCompany__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Investor Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Company__c</fullName>
        <description>Master-Detail link to the Investment Company.</description>
        <label>Investment Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Company Ownership</relationshipLabel>
        <relationshipName>CompanyOwnership</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__EndDateOfOwnership__c</fullName>
        <description>Indicates the end date of the ownership.</description>
        <label>End Date of Ownership</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalCompany__c</fullName>
        <description>External Investor.</description>
        <label>External Investor</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__InternalCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Internal Investor.</description>
        <label>Internal Investor</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Company Ownership (Internal Investor)</relationshipLabel>
        <relationshipName>ParentCompany</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Internal__c</fullName>
        <formula>c2g__InternalCompany__c != null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Internal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate if a company ownership is active.</description>
        <inlineHelpText>You cannot deselect this field. If selected, you can only edit the end date field for this record.</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__OwnershipCategory__c</fullName>
        <description>Indicates the category of the ownership.</description>
        <label>Ownership Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Control</fullName>
                </value>
                <value>
                    <fullName>Significant Influence</fullName>
                </value>
                <value>
                    <fullName>Joint Venture</fullName>
                </value>
                <value>
                    <fullName>Joint Operation</fullName>
                </value>
                <value>
                    <fullName>Minority Interest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__PercentageOwnership__c</fullName>
        <label>Ownership (%)</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>c2g__StartDateOfOwnership__c</fullName>
        <description>Indicates the start date of the ownership.</description>
        <label>Start Date of Ownership</label>
        <type>Date</type>
    </fields>
    <label>Company Ownership</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__InternalCompany__c</columns>
        <columns>c2g__ExternalCompany__c</columns>
        <columns>c2g__Company__c</columns>
        <columns>c2g__OwnershipCategory__c</columns>
        <columns>c2g__PercentageOwnership__c</columns>
        <columns>c2g__StartDateOfOwnership__c</columns>
        <columns>c2g__EndDateOfOwnership__c</columns>
        <columns>c2g__IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CO-{000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Company Ownerships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>